--- a/res/layout/activity_start_game.xml
+++ b/res/layout/activity_start_game.xml
@@ -104,7 +104,7 @@
 	            android:id="@+id/save_button"
 	            android:layout_width="match_parent"
 	            android:layout_height="match_parent"
-	            android:text="@string/save"	/>        
+	            android:text="@string/start_game"	/>        
 	            
         </LinearLayout>
 
